Programmed the fuel consumptin calcuation along with ensuring that the input boxes are of type number. Added the appropriate styling for type number boxes identical to type text input. Added a paragraph for the output provided by the programmed javascript function. Textarea added in the join us page to replace the small text type input. Added an empty paragraph on both tools and join us to fix bottom spacing issues.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -134,7 +134,7 @@ form {
 	display: inline-block;
 }
 
-.calculator input[type=text] {
+.calculator input[type=text], input[type=number] {
 	margin: 8px;
 	box-sizing: border-box;
 	border: 2px solid #7cc124;
@@ -142,7 +142,7 @@ form {
 	padding: 5px;
 }
 
-.calculator input[type=text]:hover, input[type=text]:focus {
+.calculator input[type=text]:hover, input[type=text]:focus, input[type=number]:hover, input[type=number]:focus {
 	background-color: #f5f5f5;
 }
 
@@ -153,7 +153,7 @@ form {
 	padding-top: 5px;
 	padding-bottom: 5px;
 	margin-top: 15px;
-	margin-bottom: 20px;
+	margin-bottom: 5px;
 	color: white;
 	cursor: pointer;
 	font-size: 18px;
